--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
-import '../styles/global.css';
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 const pageTitle = "About Me";
 
@@ -43,9 +45,8 @@ const textCase = "uppercase";
   </head>
 
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
+
     <h1>{pageTitle}</h1>
     <p>Here are a few facts about me:</p>
     <ul>
@@ -78,5 +79,11 @@ const textCase = "uppercase";
         <p>My goal is not 3 days.</p>
       )
     }
+
+    <Footer />
+
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
